// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`newline-before-arrow.js format[babel]} 1`] = `
"No line break is allowed before '=>'. (2:3)
  1 | async x
> 2 | => x
    |   ^
  3 |
Cause: No line break is allowed before '=>'. (2:2)"
`;

exports[`newline-before-arrow.js format[babel]} 2`] = `
"Unexpected keyword or identifier. (1:1)
> 1 | async x
    | ^
  2 | => x
  3 |
Cause: Unexpected keyword or identifier."
`;

exports[`newline-before-arrow.js format[babel]} 3`] = `
"Illegal newline before arrow (2:1)
  1 | async x
> 2 | => x
    | ^^
  3 |"
`;

exports[`newline-before-arrow.js format[babel]} 4`] = `
"No line break is allowed before '=>'. (2:3)
  1 | async x
> 2 | => x
    |   ^
  3 |
Cause: No line break is allowed before '=>'. (2:2)"
`;

exports[`newline-before-arrow.js format[babel]} 5`] = `
"Unexpected token (2:1)
  1 | async x
> 2 | => x
    | ^
  3 |
Cause: Unexpected token (2:0)"
`;

exports[`newline-before-arrow.js format[babel]} 6`] = `
"Unexpected token => (2:1)
  1 | async x
> 2 | => x
    | ^
  3 |
Cause: Unexpected token =>"
`;

exports[`newline-before-arrow.js format[babel]} 7`] = `
"No line break is allowed after '=>' (2:1)
  1 | async x
> 2 | => x
    | ^^
  3 |
Cause: [2:0-2:2]: No line break is allowed after '=>'"
`;

exports[`newline-before-arrow.js format[babel]} 8`] = `
"No line break is allowed before '=>'. (2:3)
  1 | async x
> 2 | => x
    |   ^
  3 |
Cause: No line break is allowed before '=>'. (2:2)"
`;

exports[`newline-before-arrow.js format[babel]} 9`] = `
"Line terminator not permitted before arrow (2:1)
  1 | async x
> 2 | => x
    | ^^
  3 |"
`;
